syntax = "proto3";

package demo;

option go_package = "/;example";

// protoc --proto_path=. --go_out=plugins=grpc:. example.proto
service DemoApi {
  rpc SayHello(SayHelloReq) returns (SayHelloRsp) {};
}

message SayHelloReq{
  string name = 1;
}

message SayHelloRsp{
  string result = 1;
}
